# chaiscript-example

./: .gitmodules  CMakeLists.txt  test.chai
src/: .chai.cpp.swp  .chai.cpp.un~  chai.cpp
